Fixed info button height and overflow, fixed fetch bug on bodyPart icons after searching

--- a/client/src/components/DisplayExercises.scss
+++ b/client/src/components/DisplayExercises.scss
@@ -39,6 +39,9 @@
         font-size: 12px;
         border: 2px solid;
         min-width: 90px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       button:first-child {
